--- a/.github/workflows/hlint.yml
+++ b/.github/workflows/hlint.yml
@@ -1,24 +1,23 @@
+---
 name: Haskell Linter
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: ['**']
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: 'Set up HLint'
-      uses: rwe/actions-hlint-setup@v1
-      with:
-        version: '3.1.6'
+      - name: 'Set up HLint'
+        uses: haskell/actions/hlint-setup@v2
+        with:
+          version: '3.5'
 
-    - name: 'Run HLint'
-      uses: rwe/actions-hlint-run@v2
-      with:
-        path: src/
-        fail-on: warning
+      - name: 'Run HLint'
+        uses: haskell/actions/hlint-run@v2
+        with:
+          path: '["src/", "test/", "app/"]'
+          fail-on: suggestion
