--- a/package.yaml
+++ b/package.yaml
@@ -31,6 +31,7 @@ library:
     - Modelling.MLM.Validate
     - Modelling.MLM.Generate
     - Modelling.MLM.FromXModeler
+    - Modelling.MLM.Edit
   dependencies:
     - extra
     - string-interpolate
@@ -65,6 +66,13 @@ executables:
     dependencies:
       - xmodeler-tooling
       - graphviz
+  populateAnMLM:
+    main: populateAnMLM.hs
+    source-dirs: app
+    dependencies:
+      - xmodeler-tooling
+      - graphviz
+      - QuickCheck
 
 tests:
   xmodeler-tooling-test:
