--- a/stack.yaml
+++ b/stack.yaml
@@ -5,5 +5,6 @@ packages:
   - .
 
 extra-deps:
+  - call-alloy-0.4.0.1@sha256:f1d03617af4ce8845e3ffd5073406e5f0fdf16a7669ee79fe68924ad550f410d,3167
   - diagrams-graphviz-1.4.1.1
   - Unique-0.4.7.9
