use modelling-tasks repo (#7)
 - close #7

--- a/package.yaml
+++ b/package.yaml
@@ -43,6 +43,7 @@ library:
     - graphviz
     - diagrams-lib
     - diagrams-graphviz
+    - modelling-tasks
     - parsec
     - containers
     - bimap
